--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,9 +5,14 @@ services:
     image: mongo
   basketdb:
     image: redis:alpine
+  discountdb:
+    image: postgres
 
   portainer:
     image: portainer/portainer-ce
+
+  pgadmin:
+    image: dpage/pgadmin4
 
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -24,3 +29,5 @@ services:
 volumes:
   mongo_data:
   portainer_data:
+  postgres_data:
+  pgadmin_data:
