--- a/src/Services/Discount/Discount.API/appsettings.json
+++ b/src/Services/Discount/Discount.API/appsettings.json
@@ -1,8 +1,9 @@
 {
   "DatabaseSettings": {
-    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+    "ConnectionString": "mongodb://localhost:27060",
+    "DatabaseName": "DiscountDb",
+    "CollectionName": "Discounts"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -12,3 +13,4 @@
   },
   "AllowedHosts": "*"
 }
+
