--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -5,8 +5,14 @@ services:
     container_name: catalodb
     restart: always
     ports:
-        - "27017:27017"
-    volumes:
+        - "27070:27017"
+
+  discountdb:
+     container_name: discountdb
+     restart: always
+     ports:
+        - "27060:27017"
+     volumes:
         - mongo_data:/data/db
 
   basketdb:
@@ -15,26 +21,15 @@ services:
     ports:
         - "6379:6379"
 
-  discountdb:
-    container_name: discountdb
-    environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin1234
-      - POSTGRES_DB=DiscountDb
-    restart: always
-    ports:
-        - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-
   pgadmin:
     container_name: pgadmin
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@aspnetrun.com
       - PGADMIN_DEFAULT_PASSWORD=admin1234
+      - DatabaseSettings:ConnectionString=Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;
     restart: always
     ports:
-        - "5050:80"
+        - "5020:80"
     volumes:
       - pgadmin_data:/root/.pgadmin
 
@@ -57,6 +52,16 @@ services:
       - catalogdb
     ports:
       - "5000:80"
+
+  discount.api:
+    container_name: discountdb.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=mongodb://discountdb:27060"
+    depends_on:
+      - discountdb
+    ports:
+      - "5002:80"
 
   basket.api:
     container_name: basket.api
