--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -6,7 +6,7 @@ services:
   basketdb:
     image: redis:alpine
   discountdb:
-    image: postgres
+    image: mongo
 
   portainer:
     image: portainer/portainer-ce
@@ -19,6 +19,12 @@ services:
     build:
       context: .
       dockerfile: Services\Catalog\Catalog.API\Dockerfile
+
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
+    build:
+      context: .
+      dockerfile: Services\Discount\Discount.API\Dockerfile
 
   basket.api:
     image: ${DOCKER_REGISTRY-}basketapi
