consume Discount Grps

--- a/src/Services/Discount/Discount.Grpc/appsettings.json
+++ b/src/Services/Discount/Discount.Grpc/appsettings.json
@@ -1,10 +1,4 @@
 {
-  "CacheSettings": {
-    "ConnectionString": "localhost:6379"
-  },
-  "GrpcSettings": {
-    "DiscountUrl": "http://localhost:5004"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -12,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
+  }
 }
