--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -68,8 +68,20 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
+      - "GrpcSettings:DiscountUrl=http://discount.grpc"
     depends_on:
       - basketdb
     ports:
       - "5001:80"
+
+
+  discount.grpc:
+    container_name: discount.grpc
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=mongodb://discountdb:27060"
+    depends_on:
+      - discountdb
+    ports:
+      - "5003:80"
 
