added into docker Ordering.API

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,6 +8,9 @@ services:
   discountdb:
     image: mongo
 
+  orderdb:
+    image: mcr.microsoft.com/mssql/server:2017-latest
+
   portainer:
     image: portainer/portainer-ce
 
@@ -38,9 +41,16 @@ services:
       context: .
       dockerfile: Services/Discount/Discount.Grpc/Dockerfile
 
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: Services/Ordering/Ordering.API/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
 
