--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -21,6 +21,15 @@ services:
     ports:
         - "6379:6379"
 
+  orderdb:
+    container_name: orderdb
+    environment:
+        SA_PASSWORD: "SwN12345678"
+        ACCEPT_EULA: "Y"
+    restart: always
+    ports:
+        - "1433:1433"
+
   pgadmin:
     container_name: pgadmin
     environment:
@@ -85,3 +94,12 @@ services:
     ports:
       - "5003:80"
 
+  ordering.api:
+    container_name: ordering.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"
+    depends_on:
+        - orderdb
+    ports:
+        - "8004:80"
