--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -11,6 +11,10 @@ services:
   orderdb:
     image: mcr.microsoft.com/mssql/server:2017-latest
 
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+
+
   portainer:
     image: portainer/portainer-ce
 
