basket and ordering with rabbitMq

--- a/src/Services/Discount/Discount.Grpc/appsettings.json
+++ b/src/Services/Discount/Discount.Grpc/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27060",
+    "DatabaseName": "DiscountDb",
+    "CollectionName": "Discounts"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
