--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -114,3 +114,17 @@ services:
         - rabbitmq
     ports:
         - "8004:80"
+  
+
+  ocelotapigw:
+    container_name: ocelotapigw
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    depends_on:
+        - catalog.api
+        - basket.api
+        - discount.api
+        - ordering.api
+    ports:
+      - "8050:80"
+
