developed Shopping.Aggregator

--- a/src/ApiGateWays/OcelotApiGW/appsettings.Local.json
+++ b/src/ApiGateWays/OcelotApiGW/appsettings.Local.json
@@ -6,8 +6,8 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "catalog.api",
-          "Port": "80"
+          "Host": "localhost",
+          "Port": "8000"
         }
       ],
       "UpstreamPathTemplate": "/Catalog",
@@ -19,8 +19,8 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "catalog.api",
-          "Port": "80"
+          "Host": "localhost",
+          "Port": "8000"
         }
       ],
       "UpstreamPathTemplate": "/Catalog/{id}",
@@ -31,8 +31,8 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "catalog.api",
-          "Port": "80"
+          "Host": "localhost",
+          "Port": "8000"
         }
       ],
       "UpstreamPathTemplate": "/Catalog/GetProductByCategory/{category}",
@@ -44,8 +44,8 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "basket.api",
-          "Port": "80"
+          "Host": "localhost",
+          "Port": "8001"
         }
       ],
       "UpstreamPathTemplate": "/Basket/{userName}",
@@ -56,8 +56,8 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "basket.api",
-          "Port": "80"
+          "Host": "localhost",
+          "Port": "8001"
         }
       ],
       "UpstreamPathTemplate": "/Basket",
@@ -68,8 +68,8 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "basket.api",
-          "Port": "80"
+          "Host": "localhost",
+          "Port": "8001"
         }
       ],
       "UpstreamPathTemplate": "/Basket/Checkout",
@@ -88,8 +88,8 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "discount.api",
-          "Port": "80"
+          "Host": "localhost",
+          "Port": "8002"
         }
       ],
       "UpstreamPathTemplate": "/Discount/{productName}",
@@ -100,8 +100,8 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "discount.api",
-          "Port": "80"
+          "Host": "localhost",
+          "Port": "8002"
         }
       ],
       "UpstreamPathTemplate": "/Discount",
@@ -113,8 +113,8 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "ordering.api",
-          "Port": "80"
+          "Host": "localhost",
+          "Port": "8004"
         }
       ],
       "UpstreamPathTemplate": "/Order/{userName}",
