--- a/src/Services/Discount/Discount.Grpc/appsettings.json
+++ b/src/Services/Discount/Discount.Grpc/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DatabaseSettings": {
-    "ConnectionString": "mongodb://localhost:27060",
+    "ConnectionString": "mongodb://localhost:27060?connect=replicaSet",
     "DatabaseName": "DiscountDb",
     "CollectionName": "Discounts"
   },
