--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -57,11 +57,18 @@ services:
       context: .
       dockerfile: ApiGateWays/OcelotApiGW/Dockerfile
 
+  shopping.aggregator:
+    image: ${DOCKER_REGISTRY-}shoppingaggregator
+    build:
+      context: .
+      dockerfile: ApiGateWays/Shopping.Aggregator/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
 
 
 
